--- a/TimelyBackend/appsettings.json
+++ b/TimelyBackend/appsettings.json
@@ -6,7 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+
   "ConnectionStrings": {
-    "TimelyContext": "Server=localhost;Database=timely;Username=user;Password=abcd1234!"
+    "TimelyContext": "Server=136.244.95.107;Database=timely;Username=postgres;Password=59f81c882b50670db24f88df67b2ccc1;Port=2697"
   }
 }
+//"TimelyContext": "Server=localhost;Database=timely;Username=user;Password=abcd1234!"
